--- a/java script/test.html
+++ b/java script/test.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
-    <script>
-        console.log('hello world');
+    <script src="test.js">
     </script>
 </body>
 </html>
